--- a/styles.css
+++ b/styles.css
@@ -3,11 +3,11 @@ body{
 
 }
 .NFTpic{
-  width:200px;
-  position: relative;
-  left: 65px;
-  top:20px;
-  border-radius: 15px;
+  max-width: 100%;
+    /* position: relative; */
+    /* left: 65px; */
+    top: 20px;
+    border-radius: 15px;
 }
 .para{
   font-size: 18px;
@@ -16,9 +16,12 @@ body{
 
 }
 .card{
-  margin: 450px;
-  background-color: #14253d;
-  border-radius: 20px;
+  display: flex;
+    
+    max-width: 350px;
+    background-color: #14253d;
+    border-radius: 20px;
+    flex-direction: column;
 
 
 
@@ -59,4 +62,9 @@ h3{
   border-radius: 21px;
 
 
+}
+
+table{
+  display:flex;
+  flex-direction:column;
 }
